Closed
Bug 79213
Opened 25 years ago
Closed 25 years ago
nsEventStateManager::PreHandleEvent dereference a NULL nsCOMPtr with operator->().:
Categories
(Core :: DOM: Events, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9.1
People
(Reporter: timeless, Assigned: timeless)
References
(Blocks 1 open bug, )
Details
(Keywords: crash, Whiteboard: timeless-xlib-dogfood)
Attachments
(1 file)
|
787 bytes,
patch
|
Details | Diff | Splinter Review |
help>about
[xlib build] Xsun xserver.
Enabling Quirk StyleSheet
###!!! ASSERTION: nsImageXlib::DrawToImage not yet implemented: 'Not Reached',
file /tmp/mozilla/gfx/src/xlib/nsImageXlib.cpp, line 1093
###!!! Break: at file /tmp/mozilla/gfx/src/xlib/nsImageXlib.cpp, line 1093
^G
###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().:
'mRawPtr != 0', file ../../../dist/include/nsCOMPtr.h, line 649
###!!! Break: at file ../../../dist/include/nsCOMPtr.h, line 649
^G
Program received signal SIGSEGV, Segmentation fault.
0xfc642960 in nsEventStateManager::PreHandleEvent (this=0xd43508,
aPresContext=0xd31be8, aEvent=0xffbef328, aTargetFrame=0xd45618,
aStatus=0xffbef1cc, aView=0xd4a988)
at /tmp/mozilla/content/events/src/nsEventStateManager.cpp:483
/tmp/mozilla/content/events/src/nsEventStateManager.cpp: No such file or
directory.
(gdb) bt
#0 0xfc642960 in nsEventStateManager::PreHandleEvent (this=0xd43508,
aPresContext=0xd31be8, aEvent=0xffbef328, aTargetFrame=0xd45618,
aStatus=0xffbef1cc, aView=0xd4a988)
at /tmp/mozilla/content/events/src/nsEventStateManager.cpp:483
#1 0xfbdc8f10 in PresShell::HandleEventInternal (this=0xd3f790,
aEvent=0xffbef328, aView=0xd4a988, aFlags=1, aStatus=0xffbef1cc)
at /tmp/mozilla/layout/html/base/src/nsPresShell.cpp:5552
#2 0xfbdc8948 in PresShell::HandleEvent (this=0xd3f790, aView=0xd4a988,
aEvent=0xffbef328, aEventStatus=0xffbef1cc, aForceHandle=0,
aHandled=@0xffbef118) at /tmp/mozilla/layout/html/base/src/nsPresShell.cpp:5485
#3 0xfcdb6114 in nsView::HandleEvent (this=0xd4a988, event=0xffbef328,
aEventFlags=8, aStatus=0xffbef1cc, aForceHandle=0, aHandled=@0xffbef118)
at /tmp/mozilla/view/src/nsView.cpp:364
#4 0xfcdb604c in nsView::HandleEvent (this=0xd47218, event=0xffbef328,
aEventFlags=8, aStatus=0xffbef1cc, aForceHandle=0, aHandled=@0xffbef118)
at /tmp/mozilla/view/src/nsView.cpp:348
#5 0xfcdb604c in nsView::HandleEvent (this=0xd3f4f0, event=0xffbef328,
aEventFlags=28, aStatus=0xffbef1cc, aForceHandle=1, aHandled=@0xffbef118)
at /tmp/mozilla/view/src/nsView.cpp:348
#6 0xfcdc8284 in nsViewManager::DispatchEvent (this=0xd3efc0,
aEvent=0xffbef328, aStatus=0xffbef1cc)
at /tmp/mozilla/view/src/nsViewManager.cpp:2053
#7 0xfcdb510c in HandleEvent (aEvent=0xffbef328)
at /tmp/mozilla/view/src/nsView.cpp:67
#8 0xfdac4418 in nsWidget::DispatchEvent (this=0xd3f558, aEvent=0xffbef328,
aStatus=@0xffbef2b4) at /tmp/mozilla/widget/src/xlib/nsWidget.cpp:1276
#9 0xfdac4150 in nsWidget::DispatchWindowEvent (this=0xd3f558,
aEvent=@0xffbef328) at /tmp/mozilla/widget/src/xlib/nsWidget.cpp:1184
#10 0xfdac7688 in nsWindow::SetFocus (this=0xd3f558, aRaise=0)
at /tmp/mozilla/widget/src/xlib/nsWindow.cpp:361
#11 0xfdab49a8 in nsAppShell::HandleEnterEvent (event=0xffbef518,
aWidget=0xd3f558) at /tmp/mozilla/widget/src/xlib/nsAppShell.cpp:1167
#12 0xfdab2db4 in nsAppShell::DispatchXEvent (event=0xffbef518)
at /tmp/mozilla/widget/src/xlib/nsAppShell.cpp:640
#13 0xfdab254c in nsAppShell::Run (this=0x1985e0)
at /tmp/mozilla/widget/src/xlib/nsAppShell.cpp:454
#14 0xfdbc64d8 in nsAppShellService::Run (this=0x173360)
at /tmp/mozilla/xpfe/appshell/src/nsAppShellService.cpp:407
#15 0x23264 in main1 (argc=3, argv=0xffbef93c, nativeApp=0x0)
at /tmp/mozilla/xpfe/bootstrap/nsAppRunner.cpp:1010
#16 0x244a4 in main (argc=3, argv=0xffbef93c)
at /tmp/mozilla/xpfe/bootstrap/nsAppRunner.cpp:1311
Comment 1•25 years ago
|
||
->Tom
Assignee: saari → joki
Summary: nsEventStateManager::PreHandleEvent dereference a NULL nsCOMPtr with operator->().: → nsEventStateManager::PreHandleEvent dereference a NULL nsCOMPtr with operator->().:
here's a quick bandage which i hope will improve the length of my sessions.
Comment 4•25 years ago
|
||
I hate to just hit a bug back over the net but, saari, but you're better
qualified than me to know whether or not this patch is correct and if we should
be allowed to have a null globalObject during an NS_ACTIVATE event.
Assignee: joki → saari
Comment 5•25 years ago
|
||
r=saari
Comment 6•25 years ago
|
||
sr=jst
taking blame for checkin...
fix checked in. Filed bug 80207 for the bigger NULL issues.
Comment 10•19 years ago
|
||
fwiw, I'm seeing the following assertion on my mac os x trunk build:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.9a5pre) Gecko/20070502
Minefield/3.0a5pre
###!!! ASSERTION: win is null. this happens [often on xlib builds]. see bug #79213: 'Error', file /Users/sspitzer/Desktop/trunk-no-places/mozilla/content/events/src/nsEventStateManager.cpp, line 986
see bug #360032 for details
You need to log in
before you can comment on or make changes to this bug.
Description
•