Bugzilla Bug 79213 nsEventStateManager::PreHandleEvent dereference a NULL nsCOMPtr with operator->().: bandage fix. r=saari sr=jst.